--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,10 +52,13 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation "androidx.core:core-ktx:1.5.0"
+    implementation "androidx.fragment:fragment-ktx:1.3.4"
+
     implementation "androidx.appcompat:appcompat:1.3.0"
     implementation "com.google.android.material:material:1.3.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.2"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
